--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=ProductsService
+server.port=8080
+spring.main.banner-mode=off
+
+management.endpoints.web.exposure.include=*
+
+spring.datasource.url=jdbc:postgresql://db:5432/products-service-db
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
