--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.main.banner-mode=off
 management.endpoints.web.exposure.include=*
 
 spring.datasource.url=jdbc:postgresql://db:5432/products-service-db
-spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.username=u
+spring.datasource.password=p
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+ spring.jpa.hibernate.ddl-auto=update
+
