v.1.1 working and chained with cart

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ProductsService
+spring.application.name=products-service
 server.port=8080
 spring.main.banner-mode=off
 
@@ -9,5 +9,5 @@ spring.datasource.username=u
 spring.datasource.password=p
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
- spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 
