--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,28 @@ services:
     networks:
       - final-net
 
+  redis:
+    image: redis
+    command: redis-server --requirepass p --protected-mode no
+    ports:
+      - "6379:6379"
+    networks:
+      - final-net
+
+  shopping-cart-service:
+    image: shopping-cart-service
+    environment:
+      - SPRING_REDIS_HOST=redis
+      - SPRING_REDIS_PORT=6379
+      - SPRING_REDIS_PASSWORD=p
+    depends_on:
+      - myapp
+      - redis
+    ports:
+      - "8090:8090"
+    networks:
+      - final-net
+
 volumes:
   postgres_data:
     driver: local
