v.1.2 working and chained with cart and orders. trying to resolve jackson problem

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,20 @@ services:
     networks:
       - final-net
 
+  orders-service:
+    image: orders-service
+    environment:
+      - SPRING_REDIS_HOST=redis
+      - SPRING_REDIS_PORT=6379
+      - SPRING_REDIS_PASSWORD=p
+    depends_on:
+      - shopping-cart-service
+      - redis
+    ports:
+      - "8010:8010"
+    networks:
+      - final-net
+
 volumes:
   postgres_data:
     driver: local
